--- a/Exercise1.css
+++ b/Exercise1.css
@@ -3,30 +3,38 @@
 	padding: 0;
 }
 .logo{
-	width: 50px;
-	height: 50px;
+	width: 38px;
+	height: 38px;
+	position: fixed;
+	border-radius: 50%;
 }
 nav{
 	background-color: blue;
 
 }
+
 ul{
 	list-style-type: none;
 	text-align: left;
 	overflow: hidden;
+	padding-left: 40px;
 	
 }
 li {
 	background-color: ;
 	display: inline-block;
-	
+	padding: 10px;	
+}
+
+li .link {
+	vertical-align: center;
 }
 li a {
 	text-decoration: none;
 	margin-left: 5px;
 	color: lightgray;
 	display: block;
-	border: dotted;
+
 }
 #container{
 	display: flex;
@@ -35,3 +43,30 @@ li a {
 body{
 	background-color: black;
 }
+
+.main {
+	color: white;
+}
+
+h1 {
+	margin-top: 40px;
+}
+
+p {
+	margin-top: 40px;
+	text-align: center;
+}
+
+.album {
+	background-color: gray;
+	height: 100px;
+	position: relative;
+}
+
+
+
+
+
+
+
+
