--- a/Exercise1.css
+++ b/Exercise1.css
@@ -1,72 +1,63 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-.logo{
-	width: 38px;
-	height: 38px;
-	position: fixed;
-	border-radius: 50%;
-}
-nav{
-	background-color: blue;
+* {
+  margin: 0;
+  padding: 0; }
 
-}
+.logo {
+  width: 38px;
+  height: 38px;
+  position: fixed;
+  border-radius: 50%; }
 
-ul{
-	list-style-type: none;
-	text-align: left;
-	overflow: hidden;
-	padding-left: 40px;
-	
-}
-li {
-	background-color: ;
-	display: inline-block;
-	padding: 10px;	
-}
+nav {
+  background-color: blue; }
+  nav ul {
+    list-style-type: none;
+    text-align: left;
+    overflow: hidden;
+    padding-left: 40px; }
+  nav li {
+    display: inline-block;
+    padding: 10px; }
+  nav li .link {
+    vertical-align: center; }
+  nav li a {
+    text-decoration: none;
+    margin-left: 5px;
+    color: lightgray;
+    display: block; }
 
-li .link {
-	vertical-align: center;
-}
-li a {
-	text-decoration: none;
-	margin-left: 5px;
-	color: lightgray;
-	display: block;
+#container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around; }
 
-}
-#container{
-	display: flex;
-	flex-direction: row-reverse;
-}
-body{
-	background-color: black;
-}
+body {
+  background-color: black; }
 
 .main {
-	color: white;
-}
+  color: white; }
 
 h1 {
-	margin-top: 40px;
-}
+  margin-top: 40px; }
 
 p {
-	margin-top: 40px;
-	text-align: center;
-}
+  margin-top: 40px;
+  text-align: center;
+  color: white; }
 
 .album {
-	background-color: gray;
-	height: 100px;
-	position: relative;
-}
+  background-color: gray;
+  height: 100px;
+  position: relative; }
+  .album h2 a {
+    text-decoration: none;
+    color: white;
+    font-size: 200%; }
 
+h2 {
+  text-align: center; }
 
+.background {
+  height: 110%; }
 
-
-
-
-
-
+/*# sourceMappingURL=Exercise1.css.map */
